# altspell-universal-lojikl-inglish

./: README.md  pyproject.toml
src/altspell_universal_lojikl_inglish/: __init__.py  convert.py
src/altspell_universal_lojikl_inglish/data/: universal-lojikl-inglish-dict.csv
