[project]
name = "altspell-universal-lojikl-inglish"
version = "0.1.0"
description = "Universal Lojikl Inglish plugin for Altspell."
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Nicholas Johnson", email="njohnson@posteo.net" },
]
classifiers = [
  "Private :: Do Not Upload",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python",
  "License-Expression :: GPL-3.0-or-later",
  "Operating System :: OS Independent",
]
dependencies = [
    "altspell",
    "spacy"
]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "altspell_universal_lojikl_inglish"
